--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     width: 1200px;
     height: 500px;     
     margin: auto;
-    overflow: hidden;
+   
 }
 
 .dhaka {
@@ -27,9 +27,9 @@ img{
     max-width: 100%;
 }
  .helal{
-    width: 800px;
+    width: 1200px;
     height:300px;
-    border: 10px solid royalblue;
+    
  }
  
     
@@ -41,6 +41,7 @@ list-style: none;
 }
 .helal-1 ul li{
 float: left;
+background:olivedrab
  
 }
 .helal-1 ul li a{
@@ -51,29 +52,42 @@ float: left;
 }
 .helal-1 ul li a:hover{
     background: red;
-    ov
+     
 }
 .computer ul{
     list-style: none;
     float:left;
 }
 .computer ul{
-    width: 800px;
+    width: 1200px;
     height:100px;
-    border: 10px solid gold; 
+    
 }
 .computer ul li{
     float: left;
+    background:black;
 }
 .computer ul li a{
     display: block;
     padding: 25px;
     text-decoration: none;
     font-size:30px;
+    color:green;
 }
 .computer ul li a:hover{
-    background: green;
+    background:white;
 }
+h3{
+    font-size:100px;
+     width:1200px;
+     height:120px;
+    color: white;
+    background: black;
+    margin:auto;
+
+}
+
+l
 
 
        
