--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 }
 img{
     max-width: 100%;
+    margin: auto;
 }
  .helal{
     width: 1200px;
@@ -54,6 +55,7 @@ background:olivedrab
     background: red;
      
 }
+
 .computer ul{
     list-style: none;
     float:left;
@@ -104,5 +106,6 @@ h2{
     background:paleturquoise;
 
 }
+
 
 
