--- a/style.css
+++ b/style.css
@@ -80,9 +80,9 @@ background:olivedrab
     background:white;
 }
 h3{
-    font-size:100px;
-     width:1200px;
-     height:120px;
+    font-size:60px;
+      
+     height:135px;
     color: white;
     background: black;
     margin:auto;
@@ -105,6 +105,15 @@ h2{
     height:455px;
     background:paleturquoise;
 
+}
+.oppo{
+    height:600px;
+    width:auto;
+     background:black;
+}
+h5{
+    color:white;
+    font-size:20px;
 }
 
 
